# Quorus

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .hatchignore  .mcp.agent1.json  .mcp.agent2.json  .mcp.agent3.json  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUORUS_AUTONOMY_PLAN.md  README 2.md  README.md  ROADMAP.md  SPEC_PRODUCTION_FIXES.md  agent-prompt-template.md  alembic.ini  analytics.py  cli.py  conftest.py  docker-compose.prod.yml  docker-compose.yml  fly.toml  mcp_server.py  murmur_chat.py  murmur_tui.py  pyproject.toml  railway.json  railway.toml  relay_server.py  render.yaml  requirements-dev.txt  requirements.txt  setup.sh  test_e2e_live.py  (+6 more)
.github/workflows/: ci.yml  cold-install.yml  deploy-vercel.yml
.murmur/: history.db
docs/: CROSS_HARNESS_NOTIFICATIONS.md  CROSS_HARNESS_VERIFICATION.md  FINC_APPLICATION_v8.md  HACKATHON_REGRESSION 2.md  HARNESS_TIERS.md  KLIMENT_DEMO_RUNCARD.md  LAUNCH_FINALIZATION_PLAN.md  LAUNCH_READINESS.md  LAUNCH_TWEET_v8.md  MARKETING_LAUNCH_TWEET.md  OPERATIONS.md  POST_DEPLOY_VERIFICATION.md  POST_LAUNCH_30DAY_PLAN.md  PUBLISHING.md  QUORUS_OS_SPEC.md  REFLEXD_EVENTS.md  SENTRY_SETUP.md  SOCIAL_PROTOCOL_v1.md  STALL_DAY_OPS.md  STALL_TALK_TRACK.md  STALL_WAITLIST.md  VISION.md  YC_S26_APPLICATION_v8.md  api.md  design-b2c-api-keys.md  design-murmur-resolve.md  integrations.md  landing.html  retention-followup.md  schema.sql  tutorial.md
docs/launch/: demo-video-script.md  product-hunt.md  show-hn.md  twitter-thread.md
docs/skills/: quorus-operating-discipline.md
examples/: demo_swarm.py
murmur/: __init__.py  analytics.py  cli.py  config.py  dashboard.py  decorators.py  mcp.py  mcp_server.py  relay.py  relay_routes.py  sdk.py  tui_hub.py  watcher.py
murmur/admin/: __init__.py  models.py  routes.py
murmur/auth/: __init__.py  middleware.py  routes.py  tokens.py
murmur/backends/: __init__.py  memory.py  postgres_history.py  protocol.py  redis_backends.py  redis_client.py  sqlite_history.py
murmur/integrations/: http_agent.py  watcher.py
murmur/migrations/: env.py
murmur/models/: __init__.py  account.py  api_key.py  audit.py  outbox.py
murmur/routes/: __init__.py  agents.py  analytics.py  audit.py  health.py  helpers.py  invites.py  messages.py  models.py  presence.py  room_auth.py  room_messages.py  room_state.py  rooms.py  sse.py  usage.py  webhooks.py
murmur/services/: __init__.py  analytics_svc.py  audit_svc.py  invite_svc.py  message_svc.py  notification_svc.py  outbox_svc.py  presence_svc.py  rate_limit_svc.py  room_msg_svc.py  room_svc.py  sse_svc.py  webhook_svc.py
murmur/storage/: __init__.py  backend.py  base.py  memory.py  postgres.py  postgres_backend.py
quorus/: __init__.py  analytics.py  cli.py  config.py  dashboard.py  decorators.py  mcp_server.py  operating_discipline.py  profiles.py  relay.py  relay_routes.py  sdk.py  tui_hub.py  watcher.py
quorus/admin/: __init__.py  models.py  routes.py
quorus/auth/: __init__.py  middleware.py  policy.py  routes.py  tokens.py
quorus/backends/: __init__.py  memory.py  postgres_history.py  protocol.py  redis_backends.py  redis_client.py  sqlite_history.py
quorus/integrations/: http_agent.py  murmur-client.ts  quorus-client.ts  watcher.py
quorus/migrations/: env.py
quorus/models/: __init__.py  account.py  api_key.py  audit.py  join_code.py  outbox.py
quorus/notifications/: __init__.py  native.py
quorus/observability/: __init__.py  sentry.py
quorus/protocol/: __init__.py  social_verbs.py
quorus/routes/: __init__.py  admin_dashboard.py  admin_metrics.py  agent_dm.py  agents.py  analytics.py  audit.py  capabilities.py  health.py  helpers.py  invites.py  join_codes.py  messages.py  models.py  persistent_memory.py  presence.py  room_auth.py  room_messages.py  room_state.py  rooms.py  social.py  sse.py  tool_catalog.py  triage.py  usage.py  webhooks.py  work_queue.py
quorus/runtime/: __init__.py  launchd.py  memory.py  supervisor.py  turnguard.py
quorus/services/: __init__.py  analytics_svc.py  audit_svc.py  capability_svc.py  join_code_svc.py  message_svc.py  notification_svc.py  outbox_svc.py  persistent_memory_svc.py  presence_svc.py  rate_limit_svc.py  room_msg_svc.py  room_svc.py  social_svc.py  sse_svc.py  tool_catalog_svc.py  webhook_svc.py  work_queue_svc.py
quorus/storage/: __init__.py  base.py  postgres.py
scripts/: _mint_aarya.sh  autonomous_agent.py  autopull.sh  cold_install_smoke.py  cold_install_smoke.sh  demo_reflex.sh  fix_editable_pth.sh  heartbeat-local.sh  heartbeat.sh  install.sh  kliment_demo.sh  launch_smoke.sh  loop.sh  patch_cli.py  patch_entry_points.sh  patch_gemini.py  quorus-autosync.sh  quorus-coordination.skill  quorus_codex_loop.py  quorus_status_loop.sh  record_demo_cast.sh  record_kliment_cast.sh  reflexd.py  reflexd_smoke.sh  reflexd_streamb.py  reflexd_triage.py  replay_kliment_cast.sh  stall_demo_local.sh  stall_install_smoketest.sh  stall_setup_aarya.sh
tests/: conftest.py  test_admin.py  test_admin_metrics.py  test_agent_dm.py  test_agents.py  test_analytics_scope.py  test_audit_hash_chain.py  test_audit_routes.py  test_auth.py  test_auth_middleware_timing.py  test_auth_signup.py  test_auth_signup_rate_limit.py  test_capabilities.py  test_chat_widgets_verbs.py  test_claude_agent.py  test_cli.py  test_cli_heartbeat.py  test_cli_init_productized.py  test_cli_reflexd.py  test_cli_swarm.py  test_cli_workspaces.py  test_codex_agent.py  test_cold_install.py  test_cold_install_isolation.py  test_config.py  test_config_compat.py  test_config_manager.py  test_config_resolution.py  test_decorators.py  test_dm_rate_limit_and_dashboard_robots.py  test_editable_pth_fix.py  test_entry_point_bootstrap.py  test_fly_deploy_config.py  test_gemini_hook.py  test_health_redis_real_check.py  test_hook_subcommand_registration.py  test_hooks.py  test_hooks_auth.py  test_identity.py  test_init_wake_smoke.py  (+73 more)
website/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
(+156 files in other folders)
