[project]
name = "mcp-tunnel"
version = "0.2.0"
description = "MCP-based message relay tunnel for inter-agent communication"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "httpx",
    "uvicorn",
    "mcp",
    "pydantic",
    "rich",
]

[project.scripts]
mcp-tunnel-relay = "relay_server:main"
mcp-tunnel-analytics = "analytics:main"
murmur = "cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
